--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.0",
+    "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "^1.91.8",
     "@types/node": "^20.12.11",
     "bs58": "^5.0.0",
